--- a/fazer/index.html
+++ b/fazer/index.html
@@ -12,7 +12,18 @@
 </head>
 
 <body>
-    <h1>olar</h1>
+    <header class="header-bg">
+        <div class="header container">
+            <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+            <nav aria-label="primaria">
+                <ul class="header-menu">
+                    <li><a href="./bicicletas.html">bicicletas</a></li>
+                    <li><a href="./seguros.html">seguros</a></li>
+                    <li><a href="./contatos.html">contatos</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
