--- a/fazer/index.html
+++ b/fazer/index.html
@@ -24,6 +24,18 @@
             </nav>
         </div>
     </header>
+    <main class="intro-bg">
+        <div class="intro container">
+            <div class="intro-conteudo">
+                <h1>Bicicletas feitas sob medida<span>.</span></h1>
+                <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na
+                    sua
+                    velocidade com a Bikcraft.</p>
+                <a class="btn" href="./biciletas.html">ESCOLHA A SUA</a>
+            </div>
+            <div class="intro-img"><img src="./img/fotos/introducao.jpg" alt="bicicleta preta eletrica"></div>
+        </div>
+    </main>
 </body>
 
 </html>
