--- a/fazer/index.html
+++ b/fazer/index.html
@@ -16,7 +16,7 @@
         <div class="header container">
             <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
             <nav aria-label="primaria">
-                <ul class="header-menu">
+                <ul class="header-menu texto-normal">
                     <li><a href="./bicicletas.html">bicicletas</a></li>
                     <li><a href="./seguros.html">seguros</a></li>
                     <li><a href="./contatos.html">contatos</a></li>
@@ -27,8 +27,9 @@
     <main class="intro-bg">
         <div class="intro container">
             <div class="intro-conteudo">
-                <h1>Bicicletas feitas sob medida<span>.</span></h1>
-                <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na
+                <h1 class="titulo-principal">Bicicletas feitas sob medida<span>.</span></h1>
+                <p class="texto-grande">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você.
+                    Explore o mundo na
                     sua
                     velocidade com a Bikcraft.</p>
                 <a class="btn" href="./biciletas.html">ESCOLHA A SUA</a>
