--- a/fazer/index.html
+++ b/fazer/index.html
@@ -17,9 +17,15 @@
             <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
             <nav aria-label="primaria">
                 <ul class="header-menu texto-normal">
-                    <li><a href="./bicicletas.html">bicicletas</a></li>
-                    <li><a href="./seguros.html">seguros</a></li>
-                    <li><a href="./contatos.html">contatos</a></li>
+                    <li>
+                        <a href="./bicicletas.html">bicicletas</a>
+                    </li>
+                    <li>
+                        <a href="./seguros.html">seguros</a>
+                    </li>
+                    <li>
+                        <a href="./contatos.html">contatos</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -27,7 +33,7 @@
     <main class="intro-bg">
         <div class="intro container">
             <div class="intro-conteudo">
-                <h1 class="titulo-principal">Bicicletas feitas sob medida<span>.</span></h1>
+                <h1 class="titulo-principal">Bicicletas feitas sob medida<span class="ponto">.</span></h1>
                 <p class="texto-grande">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você.
                     Explore o mundo na
                     sua
@@ -37,6 +43,32 @@
             <div class="intro-img"><img src="./img/fotos/introducao.jpg" alt="bicicleta preta eletrica"></div>
         </div>
     </main>
+    <article class="bicicletas-lista">
+        <h2 class="titulo-principal container">Escolha a sua<span class="ponto">.</span></h2>
+        <ul>
+            <li>
+                <a href="./bicicleta/magic.html">
+                    <img src="./img/bicicletas/magic-home.jpg" alt="Bike preta">
+                    <h3 class="subtitulo-1">Magic Might</h3>
+                    <span class="texto-normal-2">R$ 1999</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bicicleta/nebula.html">
+                    <img src="./img/bicicletas/nebula-home.jpg" alt="Bike preta">
+                    <h3 class="subtitulo-1">Nebula Cosmic</h3>
+                    <span class="texto-normal-2">R$ 2999</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bicicleta/nimbus.html">
+                    <img src="./img/bicicletas/nimbus-home.jpg" alt="Bike preta">
+                    <h3 class="subtitulo-1">Nimbus Stark</h3>
+                    <span class="texto-normal-2">R$ 3999</span>
+                </a>
+            </li>
+        </ul>
+    </article>
 </body>
 
 </html>
