--- a/fazer/index.html
+++ b/fazer/index.html
@@ -30,6 +30,8 @@
             </nav>
         </div>
     </header>
+
+
     <main class="intro-bg">
         <div class="intro container">
             <div class="intro-conteudo">
@@ -43,6 +45,8 @@
             <div class="intro-img"><img src="./img/fotos/introducao.jpg" alt="bicicleta preta eletrica"></div>
         </div>
     </main>
+
+
     <article class="bicicletas-lista">
         <h2 class="titulo-principal container">Escolha a sua<span class="ponto">.</span></h2>
         <ul>
@@ -69,6 +73,45 @@
             </li>
         </ul>
     </article>
+
+    <article class="tecnologia-bg">
+        <div class="container tecnologia">
+            <div class="tecnologia-conteudo">
+                <span class="texto-normal-b tec">TECNOLOGIA AVANÇADA</span>
+                <h2 class="titulo-principal">Você escolhe as suas cores e componentes<span class="ponto">.</span></h2>
+                <p class="texto-grande">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o
+                    seu
+                    corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar
+                    completamente as suas cores.</p>
+                <a class="link" href="./biciletas"> ESCOLHA UM MODELO</a>
+                <div class="tec-diferencial">
+                    <div class="tec-item">
+                        <img src="./img/icones/eletrica.svg" alt="">
+                        <h3 class="texto-medio">Motor Elétrico</h3>
+                        <p class="texto-pequeno2">Toda Bikcraft é equipada com um motor elétrico que possui duração de
+                            até 120h. A bateria é
+                            recarregada com a sua energia gasta ao pedalar.</p>
+                    </div>
+                    <div class="tec-item">
+                        <img src="./img/icones/rastreador.svg" alt="">
+                        <h3 class="texto-medio">Rastreador</h3>
+                        <p class="texto-pequeno2">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
+                            rastreadores e sistemas
+                            anti-furto
+                            para garantir o seu sossego.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="tec-img">
+                <img src="./img/fotos/tecnologia.jpg" alt="">
+            </div>
+        </div>
+    </article>
+
+    <section class="parceiros" aria-label="Nossos parceiros">
+        <h2 class="titulo-principal container">Nossos parceiros<span class="ponto">.</span></h2>
+
+    </section>
 </body>
 
 </html>
