--- a/fazer/index.html
+++ b/fazer/index.html
@@ -120,8 +120,51 @@
             <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
             <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
         </ul>
-
     </section>
+
+    <section class="depoimento" aria-label="depoimento">
+        <div class="img-depoimento"> <img src="./img/fotos/depoimento.jpg" alt=""></div>
+        <div class="conteudo-dep">
+            <blockquote>
+                <p class="depoimento-texto subtitulo-1">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft
+                    fez
+                    foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+                <span class="nome texto-normal-b"> Ana Júlia</span>
+            </blockquote>
+        </div>
+    </section>
+
+    <article class="seguros-bg">
+        <div class=" seguros container">
+            <h2 class="titulo-principal ">Seguros<span class="ponto">.</span>
+            </h2>
+            <div class="seguro-item">
+                <h3 class="subtitulo-1">Prata</h3>
+                <span class="subtitulo-1">R$199 <span class="texto-pequeno">MENSAL</span> </span>
+                <ul class="texto-normal-2">
+                    <li>Duas trocas por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 08h às 18h</li>
+                    <li>Cobertura estadual</li>
+                </ul>
+                <a href="./orcamento.html" class="btn sec">INSCREVA-SE</a>
+            </div>
+            <div class="seguro-item">
+                <h3 class="subtitulo-1 ouro">Ouro</h3>
+                <span class="subtitulo-1">R$299 <span class="texto-pequeno">MENSAL</span> </span>
+                <ul class="texto-normal-2">
+                    <li>Cinco trocas por ano</li>
+                    <li>Assistência especial</li>
+                    <li>Suporte 24h</li>
+                    <li>Cobertura nacional</li>
+                    <li>Desconto em parceiros</li>
+                    <li>Acesso ao Clube Bikcraft</li>
+                </ul>
+                <a href="./orcamento.html" class="btn">INSCREVA-SE</a>
+            </div>
+        </div>
+
+    </article>
 </body>
 
 </html>
