--- a/fazer/index.html
+++ b/fazer/index.html
@@ -165,6 +165,39 @@
         </div>
 
     </article>
+
+    <footer class="footer-bg">
+        <div class="footer container">
+            <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+            <div class="footer-contatos">
+                <h3>Contato</h3>
+                <ul>
+                    <li><a href="tel:+558199998888">(81) 9999 8888</a></li>
+                    <li><a href="mailto:bikcraf@email.com">bikcraf@email.com</a></li>
+                    <li><a href="/">Rua Ali Perto, 42 - Botafogo
+                        </a></li>
+                    <li> Rio de Janeiro - RJ</li>
+                </ul>
+            </div>
+            <div class="footer-info">
+                <nav aria-label="site">
+                    <ul class="footer=pages">
+                        <li>
+                            <a href="./bicicletas.html">bicicletas</a>
+                        </li>
+                        <li>
+                            <a href="./seguros.html">seguros</a>
+                        </li>
+                        <li>
+                            <a href="./contatos.html">contatos</a>
+                        </li>
+                        <li>
+                            <a href="./termos.html">termos e condições</a>
+                        </li>
+                    </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
