--- a/fazer/index.html
+++ b/fazer/index.html
@@ -136,7 +136,7 @@
 
     <article class="seguros-bg">
         <div class=" seguros container">
-            <h2 class="titulo-principal ">Seguros<span class="ponto">.</span>
+            <h2 class="titulo-principal">Seguros<span class="ponto">.</span>
             </h2>
             <div class="seguro-item">
                 <h3 class="subtitulo-1">Prata</h3>
@@ -163,25 +163,33 @@
                 <a href="./orcamento.html" class="btn">INSCREVA-SE</a>
             </div>
         </div>
-
     </article>
 
     <footer class="footer-bg">
         <div class="footer container">
             <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
             <div class="footer-contatos">
-                <h3>Contato</h3>
-                <ul>
+                <h3 class="texto-normal-b">Contato</h3>
+                <ul class="texto-medio2">
                     <li><a href="tel:+558199998888">(81) 9999 8888</a></li>
                     <li><a href="mailto:bikcraf@email.com">bikcraf@email.com</a></li>
                     <li><a href="/">Rua Ali Perto, 42 - Botafogo
                         </a></li>
                     <li> Rio de Janeiro - RJ</li>
                 </ul>
+                <div class="footer-redes">
+                    <a href="#"><img src="./img/redes/instagram.svg" alt="instagram">
+                    </a>
+                    <a href="#"><img src="./img/redes/facebook.svg" alt="facebook">
+                    </a>
+                    <a href="#"><img src="./img/redes/youtube.svg" alt="youtube">
+                    </a>
+                </div>
             </div>
             <div class="footer-info">
+                <h3 class="texto-normal-b">Informações</h3>
                 <nav aria-label="site">
-                    <ul class="footer=pages">
+                    <ul class="texto-medio2">
                         <li>
                             <a href="./bicicletas.html">bicicletas</a>
                         </li>
@@ -196,6 +204,7 @@
                         </li>
                     </ul>
             </div>
+            <p class="footer-cop">Bikcraft alguns direitos reservados</p>
         </div>
     </footer>
 </body>
